--- a/PowerPack/v.01/PowerPack.mxml
+++ b/PowerPack/v.01/PowerPack.mxml
@@ -1,74 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" xmlns:ns1="http://www.adobe.com/2006/fc" xmlns:ns2="com.adobe.flex.extras.controls.springgraph.*"  creationComplete="show()" xmlns:ns3="powerPack.com.*" xmlns:ns4="powerPack.com.graph.*" xmlns:ns5="*">
+<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" xmlns:ns1="http://www.adobe.com/2006/fc"   
+	initialize="init()" xmlns:ns3="PowerPack.com.*" xmlns:ns4="PowerPack.com.graph.*" xmlns:ns5="*">
 	<mx:Script>
 		<![CDATA[
-			import mx.events.MenuEvent;
-			import powerPack.com.graph.PowerPackClass;	
-			import powerPack.com.graph.graphArrow;
-			import mx.controls.Alert;
-			
-			import powerPack.com.graph.graphNode;
-            import mx.collections.*;
 			import mdm.*;
-			import mx.managers.PopUpManager;
-			import powerPack.com.*;
 
-      import mx.controls.Button;
-      import mx.collections.*;
+			import PowerPack.com.*;
+			import PowerPack.com.graph.PowerPackClass;
+			import PowerPack.com.graph.GraphCanvas;
+			import PowerPack.com.graph.GraphNode;			
+			import PowerPack.com.graph.GraphArrow;
+
+			import mx.events.MenuEvent;
+			import mx.controls.Alert;
+			import mx.managers.PopUpManager;
 			
+ 		    import flash.errors.*;
+		    import flash.events.*;
+		    import flash.net.URLLoader;
+		    import flash.net.URLRequest;
+		
+		    //--------------------------------------------------------------------------
+		    //
+		    //  Variables and properties
+		    //
+		    //--------------------------------------------------------------------------
+	          		
+           	private var settingsRequest:URLRequest;
+            private var settingsLoader:URLLoader;
+
+            private var langRequest:URLRequest;
+            private var langLoader:URLLoader;
+            
+            private var tmplRequest:URLRequest;
+            private var tmplLoader:URLLoader;
+
+            [Bindable]
+            public var settingsXML:XML = new XML(<settings></settings>);
             
             [Bindable]
-            public var menuBarCollection:XMLListCollection;
+            public var langXML:XML;
             
-            public var curOpenFile:String;
+            [Bindable]
+            public var templateXML:XML;
             
-            private var menubarXML:XMLList =
-                <>
-                    <menuitem label="File" data="">
-                        <menuitem label="New" data=""/>
-                        <menuitem label="Open File..." data=""/>
-                        <menuitem type="separator"/>
-                        <menuitem label="Save" data=""/>
-                        <menuitem label="Save As..." data=""/> 
-                        <menuitem type="separator"/>
-                        <menuitem label="Exit" data=""/>                                                
-                    </menuitem>
-                    <menuitem label="Help" data="">
-                    </menuitem>
-                </>;
-                            				
-			private function show():void { 
-				mdm.Application.init(this, OnInit); 	
-				mdm.FileExplorer.init();			
+            public var curOpenFile:String;            
+ 		
+			//--------------------------------------------------------------------------
+			//
+			//  Class methods
+			//
+			//--------------------------------------------------------------------------  	
+						
+			private function init():void 
+			{ 
+				var bExists:Boolean = true;
 				
-				menuBarCollection = new XMLListCollection(menubarXML);
+				mdm.Application.init(this, mdmInit); 	
+				mdm.FileExplorer.init();
 				
-				var node_1:graphNode = new graphNode();
-				var node_2:graphNode = new graphNode();
-	
-				canvas_1.addChild(node_1);
-				canvas_1.addChild(node_2);
+				appCtrlBar.height = 0;
+				appCtrlBar.visible = false;			
 				
-				node_1.move(10, 10);
-				node_2.move(10, 60);
-			
-				node_1.text = "\n			\r\t";
-				node_2.text = "asdfsdfsl k f    dsfsdfdsfsdfsfa \ngdfsdf";	
+				// Load application settings
+	            settingsRequest = new URLRequest("settings.xml");
+	            settingsRequest.method = URLRequestMethod.POST;
+    	        settingsLoader = new URLLoader();
+        	    settingsLoader.addEventListener(Event.COMPLETE, completeSettingsHandler);
 				
+				// Load language file
+	            langRequest = new URLRequest("lang/english.xml");
+	            langRequest.method = URLRequestMethod.POST;
+    	        langLoader = new URLLoader();
+        	    langLoader.addEventListener(Event.COMPLETE, completeLangHandler);
+	                    	  
+	            // Create loader for template  
+	            tmplRequest = new URLRequest();
+	            tmplRequest.method = URLRequestMethod.POST;
+    	        tmplLoader = new URLLoader();
+        	    tmplLoader.addEventListener(Event.COMPLETE, completeTemplateHandler);
+       	    
+				// for MDM Zinc context menu				
 				addEventListener(MouseEvent.MOUSE_OVER, mouseOverHandler);
-				
-				TileListdp = new ArrayCollection(listArray);				
 
+        	    //bExists = mdm.FileSystem.fileExistsUnicode(settingsRequest.url);        	    
+        	    if(bExists)
+	               	settingsLoader.load(settingsRequest);
+
+        	    //bExists = mdm.FileSystem.fileExistsUnicode(langRequest.url);
+          	    if(bExists)
+       	   			langLoader.load(langRequest);
 		    }
 		    
-		   	private function OnInit():void
+		   	private function mdmInit():void
 	       	{
+	       		mdm.Application.enableExitHandler()
+	       		
+				mdm.Application.onAppExit = function():void{
+	       			exitApplication();
+				}
+
 		       	mdm.Menu.Context.menuType = "function";
-		       	graphCanvas.generateContextMenu();
-		       	graphNode.generateContextMenu();
-		    	graphArrow.generateContextMenu();
+		       	GraphCanvas.generateContextMenu();
+		       	GraphNode.generateContextMenu();
+		    	GraphArrow.generateContextMenu();
 	       	}
-	    	
+	       	
+	       	public function saveSettings():void
+	       	{
+	       		if(settingsXML.name() != "settings");
+		       		settingsXML = new XML(<settings></settings>);
+	       		
+	       		settingsXML.lastopenfile = curOpenFile?curOpenFile:"";
+	       		
+   	        	var fileData:String = settingsXML.toXMLString();
+            	mdm.FileSystem.saveFileUnicode(settingsRequest.url, fileData);					
+	       	}
+	       	
+	       	public function exitApplication():void
+	       	{
+				// Save settings
+				saveSettings();
+
+            	mdm.Application.exit("ask","Are you sure you want to Exit?");	       		
+	       	}
+	    	    
+			//--------------------------------------------------------------------------
+		    //
+		    //  Event handlers
+		    //
+		    //--------------------------------------------------------------------------
+		    
+	        private function completeSettingsHandler(event:Event):void
+	        {
+	            settingsXML = XML(event.target.data);
+				
+				// Open last opened file	            
+	            curOpenFile = settingsXML.lastopenfile.toString().length>0 ? settingsXML.lastopenfile : null;
+
+            	var exists:Boolean = true;
+            	//exists = mdm.FileSystem.fileExistsUnicode(curOpenFile);
+            	if(curOpenFile && exists)
+            	{
+	            	tmplRequest.url = curOpenFile;
+    	    	    tmplLoader.load(tmplRequest); 	            
+            	}
+	        }		    
+	        private function completeLangHandler(event:Event):void
+	        {
+	            langXML = XML(event.target.data);
+	            
+        	    Alert.yesLabel = langXML.yes;
+                Alert.noLabel = langXML.no;	 
+                Alert.cancelLabel = langXML.cancel;         
+	        }
+	        private function completeTemplateHandler(event:Event):void
+	        {
+	            templateXML = XML(event.target.data);         
+	        }	        
+	    	    	
 	    	private function mouseOverHandler(event:MouseEvent):void
 	   		{	    	
 	    		PowerPackClass.refreshMenu(this);
@@ -76,57 +166,64 @@
 	    	}
 
             // Event handler for the MenuBar control's itemClick event.
-            private function menuHandler(event:MenuEvent):void  {
-                // Don't open the Alert for a menu bar item that 
-                // opens a popup submenu.
+            private function menuHandler(event:MenuEvent):void  
+            {
                 var fileBrowser:FileBrowser;
+                var fileData:String;
                 
-                if(event.item.@label == "New")
+                if(event.item.@id == "new")
                 {
                 	curOpenFile = null;
-	                canvas_1.clear();
+	                graphsAccordionChild.clear();
                 }
-                else if(event.item.@label == "Open File...")
+                else if(event.item.@id == "open_file")
                 {		
                 	fileBrowser = new FileBrowser();
+	            	fileBrowser.langXML = langXML;
                 	
                 	PopUpManager.addPopUp(fileBrowser, this, true);
-                	PopUpManager.centerPopUp(fileBrowser);
-                	fileBrowser.title = "Open File";
-                	fileBrowser.btnConfirm.label = "Open";                	
+                	PopUpManager.centerPopUp(fileBrowser);               	
                 	fileBrowser.addEventListener("closeBrowse", openBrowseHandler);
                 }
-    	        else if(event.item.@label == "Save")
+                else if(event.item.@id == "close")
+                {		
+              		curOpenFile = null;
+	                graphsAccordionChild.clear();
+                }                
+    	        else if(event.item.@id == "save")
     	        {
     	        	if(!curOpenFile)
     	        	{
                 		fileBrowser = new FileBrowser();
+	            		fileBrowser.langXML = langXML;
                 	
                 		PopUpManager.addPopUp(fileBrowser, this, true);
                 		PopUpManager.centerPopUp(fileBrowser);
-                		fileBrowser.title = "Save File";
-                		fileBrowser.btnConfirm.label = "Save";
                 		fileBrowser.addEventListener("closeBrowse", saveBrowseHandler); 
               		} 
               		else
               		{		            		
-		            	var fileData:String = canvas_1.toXML().toXMLString();
+		            	fileData = graphsAccordionChild.toXML().toXMLString();
 		            	mdm.FileSystem.saveFileUnicode(curOpenFile, fileData);             		
               		}	        
     	        }
-				else if(event.item.@label == "Save As...")
+				else if(event.item.@id == "save_as")
 				{
             		fileBrowser = new FileBrowser();
+	            	fileBrowser.langXML = langXML;
             	
             		PopUpManager.addPopUp(fileBrowser, this, true);
-            		PopUpManager.centerPopUp(fileBrowser);            		
-               		fileBrowser.title = "Save File";
-               		fileBrowser.btnConfirm.label = "Save";
+            		PopUpManager.centerPopUp(fileBrowser); 
             		fileBrowser.addEventListener("closeBrowse", saveBrowseHandler); 				
 				}
-				else if(event.item.@label == "Exit")
+				else if(event.item.@id == "language")
 				{
-					mdm.Application.exit();
+	            	langRequest.url = "lang/"+event.item.@data;
+        	    	langLoader.load(langRequest);					
+				}
+				else if(event.item.@id == "exit")
+				{
+					exitApplication();
 				}     
             }
             	
@@ -139,69 +236,86 @@
 
             	if(!exists)
             		return;
+            		
+            	tmplRequest.url = event.target.selectedItem.path;
+        	    tmplLoader.load(tmplRequest);  
             	
-            	var fileData:String = mdm.FileSystem.loadFileUnicode(event.target.selectedItem.path);
-            	
-            	canvas_1.fromXML(fileData);            	
+            	//var fileData:String = mdm.FileSystem.loadFileUnicode(event.target.selectedItem.path);
+            	//templateXML = new XML(fileData);
 
             	curOpenFile = event.target.selectedItem.path;
             }
             
             private function saveBrowseHandler(event:Event):void
             {
-            	var fileData:String = canvas_1.toXML().toXMLString();
+            	var fileData:String = graphsAccordionChild.toXML().toXMLString();
             	mdm.FileSystem.saveFileUnicode(event.target.selectedItem.path, fileData);
             	
             	curOpenFile = event.target.selectedItem.path;
-            }     
+            }
 
-      private var listArray:Array=[
-         {label: "item0", source: "@Embed('resources/Button.png')"},{label: "item1", source: "resources/Button.png"},
-         {label: "item2", source: 2},{label: "item3", source: 3},
-         {label: "item4", source: 4},{label: "item5", source: 5},
-         {label: "item6", source: 6},{label: "item7", source: 7},
-         {label: "item8", source: 8}];
-      [Bindable]
-      public var TileListdp:ArrayCollection;
-      
- 
-                   
 		]]>
 	</mx:Script>
-	<mx:ComboBox width="165" bottom="10" left="10"></mx:ComboBox>
-	<mx:VBox x="0" y="0" height="545">
+        
+	<mx:VBox top="10" left="10" bottom="10" right="10">
+		
 		<mx:MenuBar labelField="@label" itemClick="menuHandler(event);" 
-		        dataProvider="{menuBarCollection}" width="677"></mx:MenuBar>
-		<mx:TabNavigator height="100" width="677">
-			<mx:Canvas label="File" width="100%" height="100%">
-			</mx:Canvas>
-			<mx:Canvas label="Import" width="100%" height="92">
-			</mx:Canvas>
-			<mx:Canvas label="VDOM Box" width="100%" height="100%">
-			</mx:Canvas>
-		</mx:TabNavigator>
-		<mx:HDividedBox width="577">
-			<mx:Accordion fontFamily="Verdana" borderStyle="solid" height="457">
-				<mx:VBox label="Graphs" width="100%" height="100%">
-					<mx:ControlBar paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0" horizontalGap="0" width="100%" horizontalAlign="center">
-						<mx:Button label="New" width="33" labelPlacement="bottom" fontFamily="Arial" textAlign="center" cornerRadius="0" alpha="0.5"/>
-						<mx:Button label="Rename" labelPlacement="bottom" fontFamily="Arial" width="47" cornerRadius="0" alpha="0.5"/>
-						<mx:Button label="Delete" fontFamily="Arial" width="43" cornerRadius="0" labelPlacement="bottom" alpha="0.5"/>
-						<mx:Button label="Help" fontFamily="Arial" width="38" cornerRadius="0" labelPlacement="bottom" alpha="0.5"/>
-					</mx:ControlBar>
-					<mx:TileList columnCount="1" direction="vertical" allowMultipleSelection="false" dataProvider="{TileListdp}" itemRenderer="powerPack.com.Thumb" borderStyle="none" verticalScrollPolicy="auto" wordWrap="true" maxColumns="1" width="100%" height="100%"></mx:TileList>
-				</mx:VBox>
-				<mx:Canvas label="Application" width="100%" height="100%">
+		        dataProvider="{langXML.mainmenu.menuitem}" width="100%"></mx:MenuBar>
+		
+		<mx:ApplicationControlBar width="100%" height="69" id="appCtrlBar">
+			<mx:TabNavigator height="100%" width="100%">
+				
+				<mx:Canvas label="File" width="100%" height="100%">
 				</mx:Canvas>
-				<mx:Canvas label="Container" width="100%" height="100%">
+				
+				<mx:Canvas label="Import" width="100%" height="92">
 				</mx:Canvas>
-				<mx:Canvas label="Resources" width="100%" height="100%">
+				
+				<mx:Canvas label="VDOM Box" width="100%" height="100%">
 				</mx:Canvas>
-			</mx:Accordion>
+				
+			</mx:TabNavigator>
+		</mx:ApplicationControlBar>
+		
+		<mx:Spacer width="100%"/>
+		
+		<mx:HDividedBox width="100%" height="100%">
+			<mx:VBox height="100%">
+			
+				<mx:Panel width="100%" height="100%" layout="absolute" title="{langXML.navigatorpanel.title}">
+					<mx:Accordion fontFamily="Verdana" borderStyle="solid" height="100%" width="100%">
+						
+						<ns4:GraphsAccordionChild 
+							id="graphsAccordionChild"
+							langXML="{langXML}" 
+							templateXML="{templateXML}" 
+							cbInitialGraph="{cbInitGraph}"
+							vsViewStack="{viewstack}">
+						</ns4:GraphsAccordionChild>						
+						
+						<mx:Canvas label="Application" width="100%" height="100%">
+						</mx:Canvas>
+						
+						<mx:Canvas label="Container" width="100%" height="100%">
+						</mx:Canvas>
+						
+						<mx:Canvas label="Resources" width="100%" height="100%">
+						</mx:Canvas>
+						
+					</mx:Accordion>
+				</mx:Panel>
+				
+				<mx:Panel width="100%" layout="absolute" title="{langXML.initialgraphpanel.title}">
+					<mx:ComboBox width="100%" id="cbInitGraph"></mx:ComboBox>
+				</mx:Panel>
+				
+			</mx:VBox>
+			
+			<mx:Panel width="100%" height="100%" layout="absolute" title="{langXML.designpanel.title}">
+				<mx:ViewStack id="viewstack" width="100%" height="100%">
+				</mx:ViewStack>
+			</mx:Panel>
+			
 		</mx:HDividedBox>
 	</mx:VBox>
-	<mx:ViewStack id="viewstack" borderStyle="solid" width="504" height="487" x="685" y="220">
-		<ns4:graphCanvas id="canvas_1" label="View 1" width="100%" height="100%">
-		</ns4:graphCanvas>
-	</mx:ViewStack>
 </mx:Application>
