--- a/IDE/Vdom/vdom/components/treeEditor/colormenu/ColorMenu.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/colormenu/ColorMenu.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml"  creationComplete="init()">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml"  creationComplete="init()  ">
 	<mx:Script>
 		<![CDATA[
 			import vdom.events.TreeEditorEvent;
@@ -21,7 +21,25 @@
 				this.height  = list.height;
 				setPictures();
 			}
-
+			
+			public function hide():void
+			{
+				for(var str:String in arrImages)
+				{
+					arrImages[str].show = true;
+					arrImages[str].removeEventListener(TreeEditorEvent.HIDE_LINES, dispasher);
+					arrImages[str].removeEventListener(TreeEditorEvent.SHOW_LINES, dispasher);
+				}
+			}
+			
+			public function show():void
+			{
+				for(var str:String in arrImages)
+				{
+					arrImages[str].addEventListener(TreeEditorEvent.HIDE_LINES, dispasher);
+					arrImages[str].addEventListener(TreeEditorEvent.SHOW_LINES, dispasher);
+				}
+			}
 
 			private function setPictures():void
 			{
@@ -35,9 +53,6 @@
 					
 					arrImages[level] = new ColorMenuPicture(arr[str]);
 					arrImages[level].y += Number(str)*22;
-					
-					arrImages[level].addEventListener(TreeEditorEvent.HIDE_LINES, dispasher);
-					arrImages[level].addEventListener(TreeEditorEvent.SHOW_LINES, dispasher);
 					
 					addChild(arrImages[level]);
 				}
