--- a/PowerPack/v.01/PowerPack.mxml
+++ b/PowerPack/v.01/PowerPack.mxml
@@ -279,7 +279,7 @@
 		
 		<mx:Spacer width="100%"/>
 		
-		<mx:HDividedBox width="100%" height="100%">
+		<mx:HDividedBox height="100%" width="100%">
 			<mx:VBox height="100%">
 			
 				<mx:Panel width="100%" height="100%" layout="absolute" title="{langXML.navigatorpanel.title}">
