git-svn-id: http://svn.vdombox.ru/flextools/trunk@920 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack.mxml
+++ b/PowerPack/v.01/PowerPack.mxml
@@ -287,15 +287,13 @@
 						
 						<ns4:GraphsAccordionChild 
 							id="graphsAccordionChild"
+							name="application"							
 							langXML="{langXML}" 
 							templateXML="{templateXML}" 
 							cbInitialGraph="{cbInitGraph}"
 							vsViewStack="{viewstack}">
-						</ns4:GraphsAccordionChild>						
-						
-						<mx:Canvas label="Application" width="100%" height="100%">
-						</mx:Canvas>
-						
+						</ns4:GraphsAccordionChild>			
+
 						<mx:Canvas label="Container" width="100%" height="100%">
 						</mx:Canvas>
 						
