--- a/PowerPack/v.01/PowerPack/com/graph/GraphThumb.mxml
+++ b/PowerPack/v.01/PowerPack/com/graph/GraphThumb.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" horizontalAlign="center" verticalAlign="middle" borderStyle="none" height="70">
+<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" horizontalAlign="center" verticalAlign="middle" borderStyle="none" height="70" backgroundAlpha="0.0">
 
 	<mx:Image scaleContent="true" autoLoad="true" source="resources/Tree.png" id="imgThumb" width="32" height="32"/>
 	
