--- a/IDE/Vdom/vdom/components/editor/Editor.mxml
+++ b/IDE/Vdom/vdom/components/editor/Editor.mxml
@@ -26,7 +26,7 @@
 				
 				<containers:WorkArea id="workArea" 
 					visible="false"
-					dataProvider="{editorDataManager.objectDescription}" />
+					dataProvider="{dataManager.objectDescription}" />
 					
 				<mx:Canvas  id="XMLEditor" 
 					visible="true"/>
@@ -41,7 +41,7 @@
 			verticalScrollPolicy="auto" horizontalScrollPolicy="off"
 		>
 			<containers:AttributesPanel id="attributesPanel" title="Attributes"  
-				dataProvider="{editorDataManager.objectDescription}" width="200"
+				dataProvider="{dataManager.objectDescription}" width="200"
 			/>
 			<containers:ClosablePanel id="helpPanel" title="Help" 
 				width="200"
