--- a/PowerPack/v.01/PowerPack.mxml
+++ b/PowerPack/v.01/PowerPack.mxml
@@ -10,6 +10,7 @@
 			import PowerPack.com.graph.GraphCanvas;
 			import PowerPack.com.graph.GraphNode;			
 			import PowerPack.com.graph.GraphArrow;
+			import PowerPack.com.gen.*;
 
 			import mx.events.MenuEvent;
 			import mx.controls.Alert;
@@ -122,7 +123,7 @@
 				// Save settings
 				saveSettings();
 
-            	mdm.Application.exit("ask","Are you sure you want to Exit?");	       		
+            	mdm.Application.exit("ask","Are you sure you want to exit?");	       		
 	       	}
 	    	    
 			//--------------------------------------------------------------------------
@@ -225,6 +226,16 @@
 				{
 					exitApplication();
 				}     
+				else if(event.item.@id == "generate")
+				{
+					var tmplStruct:TemplateStruct = new TemplateStruct(graphsAccordionChild.toXML());
+					var buffer:String = tmplStruct.Generate();
+					
+					Alert.show(buffer);
+					
+					if(buffer)
+						mdm.FileSystem.saveFileUnicode("app.xml", buffer); 
+				}     
             }
             	
             private function openBrowseHandler(event:Event):void
@@ -287,12 +298,12 @@
 						
 						<ns4:GraphsAccordionChild 
 							id="graphsAccordionChild"
-							name="application"	
+							name="application"							
 							langXML="{langXML}" 
 							templateXML="{templateXML}" 
 							cbInitialGraph="{cbInitGraph}"
 							vsViewStack="{viewstack}">
-						</ns4:GraphsAccordionChild>
+						</ns4:GraphsAccordionChild>			
 
 						<mx:Canvas label="Container" width="100%" height="100%">
 						</mx:Canvas>
